crates/puffin_parser/src/snapshots/puffin_parser__ast_parser__ast_parser_tests__let_stmt.snap
---
source: crates/puffin_parser/src/ast_parser.rs
expression: "format!(\"{:#?}\", root)"
---
Root {
    contents: [
        Var(
            VarStmt {
                range: 0..=13,
                declaration: Ident(
                    Ident {
                        name: "banana",
                        range: 4..=9,
                    },
                ),
                init: Some(
                    Lit(
                        Int(
                            IntLiteral {
                                range: 13..=13,
                                int: 3,
                            },
                        ),
                    ),
                ),
            },
        ),
    ],
}
