crates/puffin_parser/src/snapshots/puffin_parser__ast_parser__ast_parser_tests__multiple_prefix_operation.snap
---
source: crates/puffin_parser/src/ast_parser.rs
expression: "format!(\"{:#?}\", root)"
---
"Root {\n    contents: [\n        ExprStmt(\n            Binary(\n                Add(\n                    AddBinaryExpr {\n                        range: 0..7,\n                        a: Binary(\n                            Negate(\n                                NegateBinaryExpr {\n                                    range: 0..3,\n                                    a: Binary(\n                                        Negate(\n                                            NegateBinaryExpr {\n                                                range: 1..3,\n                                                a: Lit(\n                                                    Int(\n                                                        IntLiteral {\n                                                            range: 2..3,\n                                                            int: 1,\n                                                        },\n                                                    ),\n                                                ),\n                                            },\n                                        ),\n                                    ),\n                                },\n                            ),\n                        ),\n                        b: Binary(\n                            Negate(\n                                NegateBinaryExpr {\n                                    range: 5..7,\n                                    a: Lit(\n                                        Int(\n                                            IntLiteral {\n                                                range: 6..7,\n                                                int: 2,\n                                            },\n                                        ),\n                                    ),\n                                },\n                            ),\n                        ),\n                    },\n                ),\n            ),\n        ),\n    ],\n}"

