crates/puffin_parser/src/snapshots/puffin_parser__ast_parser__ast_parser_tests__multiple_simple.snap
---
source: crates/puffin_parser/src/ast_parser.rs
expression: "format!(\"{:#?}\", root)"
---
"Root {\n    contents: [\n        ExprStmt(\n            Binary(\n                Add(\n                    AddBinaryExpr {\n                        line: 1,\n                        a: Binary(\n                            Add(\n                                AddBinaryExpr {\n                                    line: 1,\n                                    a: Binary(\n                                        Add(\n                                            AddBinaryExpr {\n                                                line: 1,\n                                                a: Lit(\n                                                    Int(\n                                                        IntLiteral {\n                                                            line: 1,\n                                                            int: 1,\n                                                        },\n                                                    ),\n                                                ),\n                                                b: Lit(\n                                                    Int(\n                                                        IntLiteral {\n                                                            line: 1,\n                                                            int: 2,\n                                                        },\n                                                    ),\n                                                ),\n                                            },\n                                        ),\n                                    ),\n                                    b: Lit(\n                                        Int(\n                                            IntLiteral {\n                                                line: 1,\n                                                int: 3,\n                                            },\n                                        ),\n                                    ),\n                                },\n                            ),\n                        ),\n                        b: Lit(\n                            Int(\n                                IntLiteral {\n                                    line: 1,\n                                    int: 4,\n                                },\n                            ),\n                        ),\n                    },\n                ),\n            ),\n        ),\n    ],\n}"

