crates/puffin_parser/src/snapshots/puffin_parser__ast_parser__ast_parser_tests__order_of_operations.snap
---
source: crates/puffin_parser/src/ast_parser.rs
expression: "format!(\"{:#?}\", root)"
---
Root {
    contents: [
        ExprStmt(
            Binary(
                Subtract(
                    SubtractBinaryExpr {
                        range: 0..=11,
                        a: Binary(
                            Add(
                                AddBinaryExpr {
                                    range: 0..=8,
                                    a: Lit(
                                        Int(
                                            IntLiteral {
                                                range: 0..=0,
                                                int: 1,
                                            },
                                        ),
                                    ),
                                    b: Binary(
                                        Multiply(
                                            MultiplyBinaryExpr {
                                                range: 4..=8,
                                                a: Lit(
                                                    Int(
                                                        IntLiteral {
                                                            range: 4..=4,
                                                            int: 2,
                                                        },
                                                    ),
                                                ),
                                                b: Lit(
                                                    Int(
                                                        IntLiteral {
                                                            range: 8..=8,
                                                            int: 5,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                    ),
                                },
                            ),
                        ),
                        b: Lit(
                            Int(
                                IntLiteral {
                                    range: 11..=11,
                                    int: 3,
                                },
                            ),
                        ),
                    },
                ),
            ),
        ),
    ],
}
