crates/puffin_parser/src/snapshots/puffin_parser__ast_parser__ast_parser_tests__paren.snap
---
source: crates/puffin_parser/src/ast_parser.rs
expression: "format!(\"{:#?}\", root)"
---
"Root {\n    contents: [\n        ExprStmt(\n            Binary(\n                Add(\n                    AddBinaryExpr {\n                        range: 0..24,\n                        a: Binary(\n                            Add(\n                                AddBinaryExpr {\n                                    range: 0..15,\n                                    a: Lit(\n                                        Int(\n                                            IntLiteral {\n                                                range: 0..1,\n                                                int: 1,\n                                            },\n                                        ),\n                                    ),\n                                    b: Binary(\n                                        Multiply(\n                                            MultiplyBinaryExpr {\n                                                range: 4..15,\n                                                a: Lit(\n                                                    Int(\n                                                        IntLiteral {\n                                                            range: 4..5,\n                                                            int: 2,\n                                                        },\n                                                    ),\n                                                ),\n                                                b: Binary(\n                                                    Group(\n                                                        GroupBinaryExpr {\n                                                            range: 8..14,\n                                                            a: Binary(\n                                                                Subtract(\n                                                                    SubtractBinaryExpr {\n                                                                        range: 9..14,\n                                                                        a: Lit(\n                                                                            Int(\n                                                                                IntLiteral {\n                                                                                    range: 9..10,\n                                                                                    int: 3,\n                                                                                },\n                                                                            ),\n                                                                        ),\n                                                                        b: Lit(\n                                                                            Int(\n                                                                                IntLiteral {\n                                                                                    range: 13..14,\n                                                                                    int: 2,\n                                                                                },\n                                                                            ),\n                                                                        ),\n                                                                    },\n                                                                ),\n                                                            ),\n                                                        },\n                                                    ),\n                                                ),\n                                            },\n                                        ),\n                                    ),\n                                },\n                            ),\n                        ),\n                        b: Binary(\n                            Group(\n                                GroupBinaryExpr {\n                                    range: 17..23,\n                                    a: Binary(\n                                        Multiply(\n                                            MultiplyBinaryExpr {\n                                                range: 18..23,\n                                                a: Lit(\n                                                    Int(\n                                                        IntLiteral {\n                                                            range: 18..19,\n                                                            int: 1,\n                                                        },\n                                                    ),\n                                                ),\n                                                b: Lit(\n                                                    Int(\n                                                        IntLiteral {\n                                                            range: 22..23,\n                                                            int: 2,\n                                                        },\n                                                    ),\n                                                ),\n                                            },\n                                        ),\n                                    ),\n                                },\n                            ),\n                        ),\n                    },\n                ),\n            ),\n        ),\n    ],\n}"

