crates/puffin_parser/src/snapshots/puffin_parser__ast_parser__ast_parser_tests__paren_2.snap
---
source: crates/puffin_parser/src/ast_parser.rs
expression: "format!(\"{:#?}\", root)"
---
"Root {\n    contents: [\n        ExprStmt(\n            Binary(\n                Group(\n                    GroupBinaryExpr {\n                        range: 0..9,\n                        a: Binary(\n                            Add(\n                                AddBinaryExpr {\n                                    range: 1..9,\n                                    a: Binary(\n                                        Add(\n                                            AddBinaryExpr {\n                                                range: 1..6,\n                                                a: Lit(\n                                                    Int(\n                                                        IntLiteral {\n                                                            range: 1..2,\n                                                            int: 1,\n                                                        },\n                                                    ),\n                                                ),\n                                                b: Lit(\n                                                    Int(\n                                                        IntLiteral {\n                                                            range: 5..6,\n                                                            int: 2,\n                                                        },\n                                                    ),\n                                                ),\n                                            },\n                                        ),\n                                    ),\n                                    b: Lit(\n                                        Int(\n                                            IntLiteral {\n                                                range: 8..9,\n                                                int: 3,\n                                            },\n                                        ),\n                                    ),\n                                },\n                            ),\n                        ),\n                    },\n                ),\n            ),\n        ),\n    ],\n}"

