crates/puffin_parser/src/snapshots/puffin_parser__ast_parser__ast_parser_tests__paren_3.snap
---
source: crates/puffin_parser/src/ast_parser.rs
expression: "format!(\"{:#?}\", root)"
---
Root {
    contents: [
        ExprStmt(
            Binary(
                Subtract(
                    SubtractBinaryExpr {
                        range: 0..=21,
                        a: Binary(
                            Group(
                                GroupBinaryExpr {
                                    range: 1..=7,
                                    a: Binary(
                                        Add(
                                            AddBinaryExpr {
                                                range: 1..=7,
                                                a: Lit(
                                                    Int(
                                                        IntLiteral {
                                                            range: 1..=1,
                                                            int: 1,
                                                        },
                                                    ),
                                                ),
                                                b: Binary(
                                                    Group(
                                                        GroupBinaryExpr {
                                                            range: 6..=6,
                                                            a: Lit(
                                                                Int(
                                                                    IntLiteral {
                                                                        range: 6..=6,
                                                                        int: 1,
                                                                    },
                                                                ),
                                                            ),
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                    ),
                                },
                            ),
                        ),
                        b: Binary(
                            Group(
                                GroupBinaryExpr {
                                    range: 13..=20,
                                    a: Binary(
                                        Add(
                                            AddBinaryExpr {
                                                range: 13..=20,
                                                a: Binary(
                                                    Add(
                                                        AddBinaryExpr {
                                                            range: 13..=17,
                                                            a: Lit(
                                                                Int(
                                                                    IntLiteral {
                                                                        range: 13..=13,
                                                                        int: 2,
                                                                    },
                                                                ),
                                                            ),
                                                            b: Lit(
                                                                Int(
                                                                    IntLiteral {
                                                                        range: 17..=17,
                                                                        int: 1,
                                                                    },
                                                                ),
                                                            ),
                                                        },
                                                    ),
                                                ),
                                                b: Lit(
                                                    Int(
                                                        IntLiteral {
                                                            range: 20..=20,
                                                            int: 2,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                    ),
                                },
                            ),
                        ),
                    },
                ),
            ),
        ),
    ],
}
