crates/puffin_parser/src/snapshots/puffin_parser__ast_parser__ast_parser_tests__prefix_operation.snap
---
source: crates/puffin_parser/src/ast_parser.rs
expression: "format!(\"{:#?}\", root)"
---
"Root {\n    contents: [\n        ExprStmt(\n            Binary(\n                Add(\n                    AddBinaryExpr {\n                        range: 0..5,\n                        a: Binary(\n                            Negate(\n                                NegateBinaryExpr {\n                                    range: 0..2,\n                                    a: Lit(\n                                        Int(\n                                            IntLiteral {\n                                                range: 1..2,\n                                                int: 1,\n                                            },\n                                        ),\n                                    ),\n                                },\n                            ),\n                        ),\n                        b: Lit(\n                            Int(\n                                IntLiteral {\n                                    range: 4..5,\n                                    int: 2,\n                                },\n                            ),\n                        ),\n                    },\n                ),\n            ),\n        ),\n    ],\n}"

